Fix pull to refresh swipe on mobile

--- a/src/scss/scaffolding.scss
+++ b/src/scss/scaffolding.scss
@@ -33,7 +33,6 @@ body {
   background-color: var(--bg-layer-low);
   text-transform: uppercase;
   transition: 0.4s ease-in-out;
-  overflow: hidden;
 }
 
 .visually-hidden {
